# adaptagrams

cola/: CMakeLists.txt  Makefile-swig-python  adaptagrams.i  swig-python-setup.py
cola/libavoid/: CMakeLists.txt  actioninfo.cpp  actioninfo.h  connectionpin.cpp  connectionpin.h  connector.cpp  connector.h  connend.cpp  connend.h  hyperedge.cpp  hyperedge.h  hyperedgeimprover.cpp  hyperedgeimprover.h  hyperedgetree.cpp  hyperedgetree.h  junction.cpp  junction.h  makepath.cpp  mtst.cpp  obstacle.cpp  obstacle.h  orthogonal.cpp  router.cpp  router.h  scanline.cpp  shape.cpp  shape.h
cola/libavoid/tests/: 2junctions.cpp  buildOrthogonalChannelInfo1.cpp  checkpointNudging1.cpp  checkpointNudging2.cpp  checkpointNudging3.cpp  checkpoints01.cpp  checkpoints02.cpp  checkpoints03.cpp  complex.cpp  connectionpin01.cpp  connectionpin02.cpp  connectionpin03.cpp  connendmove.cpp  corneroverlap01.cpp  endlessLoop01.cpp  example.cpp  finalSegmentNudging1.cpp  finalSegmentNudging2.cpp  finalSegmentNudging3.cpp  forwardFlowingConnectors01.cpp  freeFloatingDirection01.cpp  hola01.cpp  hyperedge01.cpp  hyperedge02.cpp  hyperedgeLoop1.cpp  hyperedgeRerouting01.cpp  improveHyperedge01.cpp  improveHyperedge02.cpp  improveHyperedge03.cpp  improveHyperedge04.cpp  improveHyperedge05.cpp  improveHyperedge06.cpp  infinity.cpp  inline.cpp  inlineOverlap09.cpp  inlineOverlap10.cpp  inlineOverlap11.cpp  inlineShapes.cpp  inlineoverlap01.cpp  inlineoverlap02.cpp  (+43 more)
cola/libcola/: CMakeLists.txt
cola/libdialect/: CMakeLists.txt  routing.cpp
cola/libtopology/: CMakeLists.txt  orthogonal_topology.cpp
cola/libvpsc/: CMakeLists.txt
cola/python/: CMakeLists.txt
(+2 files in other folders)
